meta tag update

--- a/1-html-quick-fix.html
+++ b/1-html-quick-fix.html
@@ -3,9 +3,9 @@
 
     <head>
         <title>Exercise 1: HTML quick fix</title>
-        <meta charset="UTF-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
-
+    
     <body>
         <h1>First-level heading</h1>
         <h2>Second-level heading</h2>
