Added hidden comments

--- a/2-html-links-and-images.html
+++ b/2-html-links-and-images.html
@@ -19,6 +19,8 @@
         <p>A complete HTML <em>tag</em> is comprised of a one <em>element</em> and any optional <em>attribute/value pairs</em>.</p>
 
         <!-- Tabs and linebreaks are ignored, so used them to make your code more readable.-->
+        <!-- Absolute URL includes http://. I added image to gif folder because it was outside the folder. I made sure the calling location title in the HTML matched the folders name.--> 
+        
         <h2>Images</h2>
         <p>As with links, we can have absolute or relative images. This is due to how we hook pages to images or other pages. We'd more formally describe the URL (uniform resource locator) as being absolute or relative.</p>
         <p>Here's an image loaded with an absolute URL: <img src="http://media0.giphy.com/media/LeYFkniJST8wo/original.gif" width="200" title="thumb's up" alt="thumb's up" /></p>
